# Version History

## unreleased

## 0.19.1

- [MCCS-1695] workaround for pytango 9.4.2 logging interface change

## 0.19.0

- [MCCS-1636] Use ska-ser-sphinx-theme for documentation
- [KAR-632] Unpinned numpy requirements. Bumped minimum Python version to 3.8
- [KAR-587] Input queue updates

## 0.18.1

- [MCCS-1494] Bug fixes to subarray subclassing following addition of JSON validation support
- [KAR-497] Further task callback parameters bug fixes
- [MCCS-1579] Strict type-checking, leading to bug fixes in task callback parameters
  and subarray resource pool checking

## 0.18.0

- [MCCS-1424] JSON validation support

## 0.17.0

- [MCCS-1358] Remove CSP-specific content (into separate ska-csp-lmc-base repo)

## 0.16.1

- [LOW-418] Remove redundant production Dockerfile, relax pytango constraint
- [LOW-415] Complete linting and type-hinting

## 0.16.0

- [MCCS-1312] Update to pytango 9.3.6

## 0.15.0

- [MCCS-1208] Allow Abort() from RESOURCING, Off() from FAULT

## 0.14.0

- [LOW-346] Provide polling mechanism as alternive concurrency mechanism
  to task executor

## 0.13.6

- Updated numpy version

## 0.13.5

- Merge branch 'rel-275-v0-13-5' into 'main'
- [REL-275] Prepare to release 0.13.5
- [REL-275] Fix pipeline

## 0.13.4

- KAR-466 - Repository maintenance
- MCCS-1072 - Type hint & static type check base class alarm_handler_device & utils
- MCCS-934 - Type hint & Static type check base classes
- LOW-330 Import control model definitions from ska-control-model
- LOW-317 Allow Reset() from STANDBY and ON states, not just FAULT

## 0.13.3

- KAR-403 Fixed exceptions in LRCs not updating  longRunningCommandResult accordingly
- LOW-299 Fixed docs build in the CI pipeline
- LOW-278 Now using ska-tango-testing
- SAH-1156 Enable assigned_resources property inside SubarrayComponentManager.

## 0.13.2

- CT-738 fix check long running status
- AT3-140 fix base TANGO xmi files
- MCCS-1053 Fix the problem of device in UNKNOWN state upon test startup